--- a/public/config/theme.css
+++ b/public/config/theme.css
@@ -1,7 +1,7 @@
 :root {
-  --primary: #ebc908;
+  --primary: #c4c4c4;
   --primary-text: #1a1a1a;
-  --secondary: #ff1dec;
+  --secondary: #DFAE07;
   --secondary-text: #ffffff;
   --accent: #505050;
   --accent-text: #ffffff;
