--- a/public/config/theme.css
+++ b/public/config/theme.css
@@ -1,8 +1,8 @@
 :root {
   --primary: #c4c4c4;
-  --primary-text: #1a1a1a;
-  --secondary: #DFAE07;
-  --secondary-text: #ffffff;
-  --accent: #505050;
-  --accent-text: #ffffff;
+  --primary-text: #000000;
+  --secondary: #000000;
+  --secondary-text: #000000;
+  --accent: #ffffff98;
+  --accent-text: #000000;
 }
