--- a/public/config/theme.css
+++ b/public/config/theme.css
@@ -1,7 +1,7 @@
 :root {
-  --primary: #c4c4c4;
+  --primary: #ffffff;
   --primary-text: #000000;
-  --secondary: #000000;
+  --secondary: #ece2e2;
   --secondary-text: #000000;
   --accent: #ffffff98;
   --accent-text: #000000;
