--- a/public/config/theme.css
+++ b/public/config/theme.css
@@ -1,8 +1,8 @@
 :root {
-  --primary: #ffffff;
+  --primary: #000000;
   --primary-text: #000000;
-  --secondary: #ece2e2;
-  --secondary-text: #000000;
-  --accent: #ffffff98;
+  --secondary: #FBC901;
+  --secondary-text: #fdfcfc;
+  --accent: #8E8E8E;
   --accent-text: #000000;
 }
