--- a/public/config/theme.css
+++ b/public/config/theme.css
@@ -1,8 +1,8 @@
 :root {
   --primary: #000000;
   --primary-text: #000000;
-  --secondary: #FBC901;
+  --secondary: #000000;
   --secondary-text: #fdfcfc;
-  --accent: #8E8E8E;
+  --accent: #ffffff;
   --accent-text: #000000;
 }
